Refactored UI and configuration system for easier support for upcoming features. Added basic (over UI) and custom (over NBT) trading configuration for NPCs. Fixed issue with custom model rendering.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -25,14 +25,20 @@
   "text.easy_npc.config.actions": "Actions",
   "text.easy_npc.config.add": "Add",
   "text.easy_npc.config.advanced_pose": "Advanced",
+  "text.easy_npc.config.advanced_trading": "Advanced",
+  "text.easy_npc.config.attributes": "Attributes",
   "text.easy_npc.config.basic_actions": "Basic",
   "text.easy_npc.config.basic_dialog": "Basic",
+  "text.easy_npc.config.basic_trading": "Basic",
   "text.easy_npc.config.cancel": "Cancel",
   "text.easy_npc.config.clear": "Clear",
   "text.easy_npc.config.custom_pose": "Custom",
   "text.easy_npc.config.custom_preset": "Custom",
   "text.easy_npc.config.custom_skin": "Custom",
   "text.easy_npc.config.custom_skin_text": "Custom skins allows you to use locally stored skins for the NPCs.",
+  "text.easy_npc.config.custom_trading": "Custom",
+  "text.easy_npc.config.custom_trading_checkbox": "Custom Trading",
+  "text.easy_npc.config.custom_trading_text": "The checkbox will enable custom trading with custom NBT data.\n\nThis can be useful when the tradings are defined over custom NBT data and not over the UI.",
   "text.easy_npc.config.debug": "Debug",
   "text.easy_npc.config.default_pose": "Default",
   "text.easy_npc.config.default_position": "Default",
@@ -47,6 +53,9 @@
   "text.easy_npc.config.disable_dialog": "None",
   "text.easy_npc.config.disable_dialog_checkbox": "Disable Dialog",
   "text.easy_npc.config.disable_dialog_text": "The checkbox will disable the dialog, which means that the dialog will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the dialog is not necessary or may be intrusive to the user experience",
+  "text.easy_npc.config.disable_trading": "None",
+  "text.easy_npc.config.disable_trading_checkbox": "Disable Trading",
+  "text.easy_npc.config.disable_trading_text": "The checkbox will disable trading, which means that the trading will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the trading will be triggered by other actions.",
   "text.easy_npc.config.distance_actions": "Distance",
   "text.easy_npc.config.equipment": "Equipment",
   "text.easy_npc.config.execute_as_player": "Execute as player",
@@ -55,19 +64,19 @@
   "text.easy_npc.config.export_preset_world_text": "Upon clicking the Export button, the NPC settings are saved inside the world data and can be loaded into other NPCs of the same type using the Import function or as new NPC over the '/easy_npc preset import' command.",
   "text.easy_npc.config.freefall": "Freefall",
   "text.easy_npc.config.import": "△ Import",
-  "text.easy_npc.config.import_default_preset": "Import Default Preset",
   "text.easy_npc.config.import_custom_preset": "Import Custom Preset",
+  "text.easy_npc.config.import_default_preset": "Import Default Preset",
   "text.easy_npc.config.import_world_preset": "Import World Preset",
   "text.easy_npc.config.lock_rotation": "Lock",
   "text.easy_npc.config.no": "No",
   "text.easy_npc.config.no_answer": "No - Answer",
   "text.easy_npc.config.no_presets_found": "No presets found!",
   "text.easy_npc.config.on_close_dialog": "On Close Dialog",
-  "text.easy_npc.config.on_interaction": "On Interaction",
-  "text.easy_npc.config.on_distance_near": "On Near Distance <= 16 Blocks",
   "text.easy_npc.config.on_distance_close": "On Close Distance <= 8 Blocks",
-  "text.easy_npc.config.on_distance_very_close": "On very Close Distance <= 4 Blocks",
+  "text.easy_npc.config.on_distance_near": "On Near Distance <= 16 Blocks",
   "text.easy_npc.config.on_distance_touch": "On Touch Distance <= 1 Block",
+  "text.easy_npc.config.on_distance_very_close": "On very Close Distance <= 4 Blocks",
+  "text.easy_npc.config.on_interaction": "On Interaction",
   "text.easy_npc.config.on_no_selection": "On No Selection",
   "text.easy_npc.config.on_open_dialog": "On Open Dialog",
   "text.easy_npc.config.on_yes_selection": "On Yes Selection",
@@ -92,9 +101,9 @@
   "text.easy_npc.config.pose.standing": "Standing",
   "text.easy_npc.config.pose.swimming": "Swimming",
   "text.easy_npc.config.position": "Position",
+  "text.easy_npc.config.preset_custom_for": "Custom Preset for %s",
   "text.easy_npc.config.preset_default_for": "Standard Preset for %s",
   "text.easy_npc.config.preset_world_for": "World Preset for %s",
-  "text.easy_npc.config.preset_custom_for": "Custom Preset for %s",
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
   "text.easy_npc.config.reload_textures": "Reload Textures",
@@ -108,6 +117,7 @@
   "text.easy_npc.config.scaling": "Scaling",
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.skin_reloading": "Reloading skins, please wait ...",
+  "text.easy_npc.config.trading": "Trading",
   "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
   "text.easy_npc.config.world_preset": "World",
@@ -116,6 +126,7 @@
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
 
   "text.easy_npc.not_implemented": "Not implemented yet!",
+  "text.easy_npc.trading": "Trading",
 
   "text.easy_npc.item.easy_npc_wand": "The Easy NPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
 
