Refactored UI and configuration system for easier support for upcoming features. Added basic (over UI) and custom (over NBT) trading configuration for NPCs. Fixed issue with custom model rendering.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -27,14 +27,20 @@
   "text.easy_npc.config.actions": "Aktionen",
   "text.easy_npc.config.add": "Hinzufügen",
   "text.easy_npc.config.advanced_pose": "Erweitert",
+  "text.easy_npc.config.advanced_trading": "Erweitert",
+  "text.easy_npc.config.attributes": "Attribute",
   "text.easy_npc.config.basic_actions": "Grundlegend",
   "text.easy_npc.config.basic_dialog": "Einfach",
+  "text.easy_npc.config.basic_trading": "Einfach",
   "text.easy_npc.config.cancel": "Abbrechen",
   "text.easy_npc.config.clear": "Löschen",
   "text.easy_npc.config.custom_pose": "Benutzerdefiniert",
   "text.easy_npc.config.custom_preset": "Benutzerdefiniert",
   "text.easy_npc.config.custom_skin": "Benutzerdefiniert",
   "text.easy_npc.config.custom_skin_text": "Custom Skins ermöglicht es dir, lokal gespeicherte Skins für die NPCs zu verwenden.",
+  "text.easy_npc.config.custom_trading": "Benutzerdefiniert",
+  "text.easy_npc.config.custom_trading_checkbox": "Benutzerdefinierter Handel",
+  "text.easy_npc.config.custom_trading_text": "Das Kontrollkästchen ermöglicht den Handel mit benutzerdefinierten NBT-Daten.\n\nDies kann nützlich sein, wenn der Handel über benutzerdefinierte NBT-Daten und nicht über die Benutzeroberfläche definiert wird.",
   "text.easy_npc.config.debug": "Debuggen",
   "text.easy_npc.config.default_pose": "Standard",
   "text.easy_npc.config.default_position": "Standard",
@@ -49,6 +55,9 @@
   "text.easy_npc.config.disable_dialog": "Keinen",
   "text.easy_npc.config.disable_dialog_checkbox": "Deaktiviere Dialog",
   "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
+  "text.easy_npc.config.disable_trading": "Keinen",
+  "text.easy_npc.config.disable_trading_checkbox": "Deaktiviere Handel",
+  "text.easy_npc.config.disable_trading_text": "Das Kontrollkästchen deaktiviert den Handel, was bedeutet, dass der Handel nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Handel über andere Aktionen getriggert wird.",
   "text.easy_npc.config.distance_actions": "Entfernung",
   "text.easy_npc.config.equipment": "Ausrüstung",
   "text.easy_npc.config.execute_as_player": "Als Spieler ausführen",
@@ -57,19 +66,19 @@
   "text.easy_npc.config.export_preset_world_text": "Durch Betätigung des Export-Buttons werden die NPC-Einstellungen in den Weltdaten gespeichert und können  mithilfe der Import-Funktion in anderen NPCs des gleichen Typs geladen werden oder als neuer NPC über den '/easy_npc preset import' Befehl.",
   "text.easy_npc.config.freefall": "Freier Fall",
   "text.easy_npc.config.import": "△ Importieren",
-  "text.easy_npc.config.import_default_preset": "Importiere Standard Vorlage",
   "text.easy_npc.config.import_custom_preset": "Importiere benutzerdefinierte Vorlage",
+  "text.easy_npc.config.import_default_preset": "Importiere Standard Vorlage",
   "text.easy_npc.config.import_world_preset": "Importiere Welt Vorlage",
   "text.easy_npc.config.lock_rotation": "Sperre",
   "text.easy_npc.config.no": "Nein",
   "text.easy_npc.config.no_answer": "Nein - Antwort",
   "text.easy_npc.config.no_presets_found": "Keine Vorlagen gefunden!",
   "text.easy_npc.config.on_close_dialog": "Beim schließen des Dialog",
-  "text.easy_npc.config.on_interaction": "Beim Interaktion",
-  "text.easy_npc.config.on_distance_near": "Beim Annäherung <= 16 Blöcke",
   "text.easy_npc.config.on_distance_close": "Beim nahe Entfernung <= 8 Blöcke",
-  "text.easy_npc.config.on_distance_very_close": "Beim sehr nahe Entfernung <= 4 Blöcke",
+  "text.easy_npc.config.on_distance_near": "Beim Annäherung <= 16 Blöcke",
   "text.easy_npc.config.on_distance_touch": "Beim berührungs Entfernung <= 1 Block",
+  "text.easy_npc.config.on_distance_very_close": "Beim sehr nahe Entfernung <= 4 Blöcke",
+  "text.easy_npc.config.on_interaction": "Beim Interaktion",
   "text.easy_npc.config.on_no_selection": "Beim auswählen von Nein",
   "text.easy_npc.config.on_open_dialog": "Beim öffnen des Dialog",
   "text.easy_npc.config.on_yes_selection": "Beim auswählen von Ja",
@@ -94,10 +103,10 @@
   "text.easy_npc.config.pose.standing": "Stehen",
   "text.easy_npc.config.pose.swimming": "Schwimmen",
   "text.easy_npc.config.position": "Position",
-  "text.easy_npc.config.preset_default_for": "Standard Vorlagen für %s",
-  "text.easy_npc.config.preset_world_for": "Welt Vorlagen für %s",
   "text.easy_npc.config.preset_custom_for": "Benutzerdefinierte Vorlagen für %s",
+  "text.easy_npc.config.preset_default_for": "Standard Vorlagen für %s",
   "text.easy_npc.config.preset_name": "Vorlagenname",
+  "text.easy_npc.config.preset_world_for": "Welt Vorlagen für %s",
   "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
   "text.easy_npc.config.reload_textures": "Texturen neu laden",
@@ -111,6 +120,7 @@
   "text.easy_npc.config.scaling": "Skalierung",
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.skin_reloading": "Skins werden neu geladen, bitte warten ...",
+  "text.easy_npc.config.trading": "Handel",
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen oder eine Skin-URL",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
   "text.easy_npc.config.world_preset": "Welt",
@@ -119,6 +129,7 @@
   "text.easy_npc.config.yes_no_dialog": "Ja/Nein",
 
   "text.easy_npc.not_implemented": "Noch nicht implementiert!",
+  "text.easy_npc.trading": "Handel",
 
   "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für Easy NPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
 
