Added advanced trading configuration for NPCs with multiple items and prices. Added auto-reset for advanced and basic trading configuration. Added commands to open the trading screen and to reset the trading items. Added Skeleton Trader preset example for a dialog with trading options. Added better basic trading configuration. Fixed issue with importing legacy presets. Fixed issue with advanced and custom pose configuration.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -118,6 +118,11 @@
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.skin_reloading": "Reloading skins, please wait ...",
   "text.easy_npc.config.trading": "Trading",
+  "text.easy_npc.config.trading.max_uses_per_trade": "Max Uses",
+  "text.easy_npc.config.trading.mins_for_trade_reset": "Mins for Reset",
+  "text.easy_npc.config.trading.next_page": "Next >",
+  "text.easy_npc.config.trading.previous_page": "< Previous",
+  "text.easy_npc.config.trading.rewarded_exp_per_trade": "Rewarded Exp",
   "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
   "text.easy_npc.config.world_preset": "World",
