Added advanced trading configuration for NPCs with multiple items and prices. Added auto-reset for advanced and basic trading configuration. Added commands to open the trading screen and to reset the trading items. Added Skeleton Trader preset example for a dialog with trading options. Added better basic trading configuration. Fixed issue with importing legacy presets. Fixed issue with advanced and custom pose configuration.

--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -121,6 +121,11 @@
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.skin_reloading": "Skins werden neu geladen, bitte warten ...",
   "text.easy_npc.config.trading": "Handel",
+  "text.easy_npc.config.trading.max_uses_per_trade": "Max. Verwendungen",
+  "text.easy_npc.config.trading.mins_for_trade_reset": "Min. für Reset",
+  "text.easy_npc.config.trading.next_page": "Weiter >",
+  "text.easy_npc.config.trading.previous_page": "< Zurück",
+  "text.easy_npc.config.trading.rewarded_exp_per_trade": "Belohnungs EXP",
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen oder eine Skin-URL",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
   "text.easy_npc.config.world_preset": "Welt",
