- Optimized model parts data like rotation, position and scaling. - Simplified translation files - Fixed iron golem texture layers - Fixed broken dialog data - Fixed broken UI parts - Fixed broken skin selection - Prepared model scaling

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -24,33 +24,20 @@
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs",
   "text.easy_npc.config.actions": "Actions",
   "text.easy_npc.config.add": "Add",
-  "text.easy_npc.config.advanced_dialog": "Advanced",
-  "text.easy_npc.config.advanced_pose": "Advanced",
-  "text.easy_npc.config.advanced_trading": "Advanced",
+  "text.easy_npc.config.advanced": "Advanced",
   "text.easy_npc.config.attributes": "Attributes",
-  "text.easy_npc.config.basic_actions": "Basic",
-  "text.easy_npc.config.basic_attribute": "Basic",
-  "text.easy_npc.config.basic_dialog": "Basic",
-  "text.easy_npc.config.basic_objective": "Basic",
-  "text.easy_npc.config.basic_trading": "Basic",
+  "text.easy_npc.config.basic": "Basic",
   "text.easy_npc.config.button.label": "Label",
   "text.easy_npc.config.button.name": "Name",
   "text.easy_npc.config.cancel": "Cancel",
   "text.easy_npc.config.clear": "Clear",
   "text.easy_npc.config.copy_uuid": "Copy UUID",
-  "text.easy_npc.config.custom_pose": "Custom",
-  "text.easy_npc.config.custom_preset": "Custom",
-  "text.easy_npc.config.custom_skin": "Custom",
+  "text.easy_npc.config.custom": "Custom",
   "text.easy_npc.config.custom_skin_text": "Custom skins allows you to use locally stored skins for the NPCs.",
-  "text.easy_npc.config.custom_trading": "Custom",
   "text.easy_npc.config.custom_trading_checkbox": "Custom Trading",
   "text.easy_npc.config.custom_trading_text": "The checkbox will enable custom trading with custom NBT data.\n\nThis can be useful when the tradings are defined over custom NBT data and not over the UI.",
   "text.easy_npc.config.debug": "Debug",
-  "text.easy_npc.config.default_pose": "Default",
-  "text.easy_npc.config.default_position": "Default",
-  "text.easy_npc.config.default_preset": "Default",
-  "text.easy_npc.config.default_rotation": "Default",
-  "text.easy_npc.config.default_skin": "Default",
+  "text.easy_npc.config.default": "Default",
   "text.easy_npc.config.delete": "Delete",
   "text.easy_npc.config.dialog": "Dialog",
   "text.easy_npc.config.dialog.add": "Add Dialog",
@@ -61,8 +48,6 @@
   "text.easy_npc.config.dialog.edit_dialog": "Edit Dialog '%s'",
   "text.easy_npc.config.dialog.label": "Label",
   "text.easy_npc.config.dialog.name": "Name",
-  "text.easy_npc.config.dialog.next_page": "Next >",
-  "text.easy_npc.config.dialog.previous_page": "< Previous",
   "text.easy_npc.config.dialog.text": "Dialog Text",
   "text.easy_npc.config.dialog.translate": "Translate",
   "text.easy_npc.config.dialog_actions": "Dialog",
@@ -87,7 +72,7 @@
   "text.easy_npc.config.follow_entity_by_uuid": "Follow Entity by UUID",
   "text.easy_npc.config.follow_owner": "Follow Owner (%1$s)",
   "text.easy_npc.config.follow_player": "Follow Player",
-  "text.easy_npc.config.freefall": "Freefall",
+  "text.easy_npc.config.free_fall": "Free fall",
   "text.easy_npc.config.import": "▽ Import",
   "text.easy_npc.config.import_custom_preset": "Import Custom Preset",
   "text.easy_npc.config.import_default_preset": "Import Default Preset",
@@ -153,9 +138,9 @@
   "text.easy_npc.config.skin_reloading": "Reloading skins, please wait ...",
   "text.easy_npc.config.trading": "Trading",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max Uses",
-  "text.easy_npc.config.trading.mins_for_trade_reset": "Mins for Reset",
-  "text.easy_npc.config.trading.next_page": "Next >",
-  "text.easy_npc.config.trading.previous_page": "< Previous",
+  "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. for Reset",
+  "text.easy_npc.config.next_page": "Next >",
+  "text.easy_npc.config.previous_page": "< Previous",
   "text.easy_npc.config.trading.rewarded_exp_per_trade": "Rewarded Exp",
   "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
