--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -24,33 +24,20 @@
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn-Eier",
   "text.easy_npc.config.actions": "Aktionen",
   "text.easy_npc.config.add": "Hinzufügen",
-  "text.easy_npc.config.advanced_dialog": "Erweitert",
-  "text.easy_npc.config.advanced_pose": "Erweitert",
-  "text.easy_npc.config.advanced_trading": "Erweitert",
+  "text.easy_npc.config.advanced": "Erweitert",
   "text.easy_npc.config.attributes": "Attribute",
-  "text.easy_npc.config.basic_actions": "Einfach",
-  "text.easy_npc.config.basic_attribute": "Einfach",
-  "text.easy_npc.config.basic_dialog": "Einfach",
-  "text.easy_npc.config.basic_objective": "Einfach",
-  "text.easy_npc.config.basic_trading": "Einfach",
+  "text.easy_npc.config.basic": "Einfach",
   "text.easy_npc.config.button.label": "Beschriftung",
   "text.easy_npc.config.button.name": "Name",
   "text.easy_npc.config.cancel": "Abbrechen",
   "text.easy_npc.config.clear": "Löschen",
   "text.easy_npc.config.copy_uuid": "UUID kopieren",
-  "text.easy_npc.config.custom_pose": "Benutzerdefiniert",
-  "text.easy_npc.config.custom_preset": "Benutzerdefiniert",
-  "text.easy_npc.config.custom_skin": "Benutzerdefiniert",
-  "text.easy_npc.config.custom_skin_text": "Custom Skins ermöglicht es dir, lokal gespeicherte Skins für die NPCs zu verwenden.",
-  "text.easy_npc.config.custom_trading": "Benutzerdefiniert",
+  "text.easy_npc.config.custom": "Benutzerdefiniert",
+  "text.easy_npc.config.custom_skin_text": "Benutzerdefiniert Skins ermöglicht es dir, lokal gespeicherte Skins zu verwenden.",
   "text.easy_npc.config.custom_trading_checkbox": "Benutzerdefinierter Handel",
   "text.easy_npc.config.custom_trading_text": "Das Kontrollkästchen ermöglicht den Handel mit benutzerdefinierten NBT-Daten.\n\nDies kann nützlich sein, wenn der Handel über benutzerdefinierte NBT-Daten und nicht über die Benutzeroberfläche definiert wird.",
   "text.easy_npc.config.debug": "Debuggen",
-  "text.easy_npc.config.default_pose": "Standard",
-  "text.easy_npc.config.default_position": "Standard",
-  "text.easy_npc.config.default_preset": "Standard",
-  "text.easy_npc.config.default_rotation": "Standard",
-  "text.easy_npc.config.default_skin": "Standard",
+  "text.easy_npc.config.default": "Standard",
   "text.easy_npc.config.delete": "Löschen",
   "text.easy_npc.config.dialog": "Dialog",
   "text.easy_npc.config.dialog.add": "Neuen Dialog hinzufügen",
@@ -61,8 +48,6 @@
   "text.easy_npc.config.dialog.edit_dialog": "Bearbeiten Dialog '%s'",
   "text.easy_npc.config.dialog.label": "Beschriftung",
   "text.easy_npc.config.dialog.name": "Name",
-  "text.easy_npc.config.dialog.next_page": "Weiter >",
-  "text.easy_npc.config.dialog.previous_page": "< Zurück",
   "text.easy_npc.config.dialog.text": "Dialog Text",
   "text.easy_npc.config.dialog.translate": "Übersetzen",
   "text.easy_npc.config.dialog_actions": "Dialog",
@@ -87,7 +72,7 @@
   "text.easy_npc.config.follow_entity_by_uuid": "Folge Entität mit UUID",
   "text.easy_npc.config.follow_owner": "Folge dem Besitzer (%1$s)",
   "text.easy_npc.config.follow_player": "Folge dem Spieler",
-  "text.easy_npc.config.freefall": "Freier Fall",
+  "text.easy_npc.config.free_fall": "Freier Fall",
   "text.easy_npc.config.import": "▽ Importieren",
   "text.easy_npc.config.import_custom_preset": "Importiere benutzerdefinierte Vorlage",
   "text.easy_npc.config.import_default_preset": "Importiere Standard Vorlage",
@@ -103,7 +88,7 @@
   "text.easy_npc.config.on_death": "Bei Tod",
   "text.easy_npc.config.on_distance_close": "Beim nahe Entfernung <= 8 Blöcke",
   "text.easy_npc.config.on_distance_near": "Beim Annäherung <= 16 Blöcke",
-  "text.easy_npc.config.on_distance_touch": "Beim berührungs Entfernung <= 1 Block",
+  "text.easy_npc.config.on_distance_touch": "Beim Berührungsentfernung <= 1 Block",
   "text.easy_npc.config.on_distance_very_close": "Beim sehr nahe Entfernung <= 4 Blöcke",
   "text.easy_npc.config.on_hurt": "Bei Schaden",
   "text.easy_npc.config.on_interaction": "Beim Interaktion",
@@ -153,9 +138,9 @@
   "text.easy_npc.config.skin_reloading": "Skins werden neu geladen, bitte warten ...",
   "text.easy_npc.config.trading": "Handel",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max. Verwendungen",
-  "text.easy_npc.config.trading.mins_for_trade_reset": "Min. für Reset",
-  "text.easy_npc.config.trading.next_page": "Weiter >",
-  "text.easy_npc.config.trading.previous_page": "< Zurück",
+  "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. für Reset",
+  "text.easy_npc.config.next_page": "Weiter >",
+  "text.easy_npc.config.previous_page": "< Zurück",
   "text.easy_npc.config.trading.rewarded_exp_per_trade": "Belohnungs EXP",
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen oder eine Skin-URL",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
