--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -15,8 +15,8 @@
   "item.easy_npc.fairy_spawn_egg": "Elfen NPC Spawn-Ei",
   "item.easy_npc.humanoid_slim_spawn_egg": "Humanoides (schl.) NPC-Spawn-Ei",
   "item.easy_npc.humanoid_spawn_egg": "Humanoides NPC-Spawn-Ei",
-  "item.easy_npc.skeleton_spawn_egg": "Skelett NPC-Spawn-Ei",
   "item.easy_npc.iron_golem_spawn_egg": "Eisengolem NPC-Spawn-Ei",
+  "item.easy_npc.skeleton_spawn_egg": "Skelett NPC-Spawn-Ei",
   "item.easy_npc.villager_spawn_egg": "Dorfbewohner NPC-Spawn-Ei",
   "item.easy_npc.zombie_spawn_egg": "Zombie NPC-Spawn-Ei",
   "item.easy_npc.zombie_villager_spawn_egg": "Zombie Dorfbewohner NPC-Spawn-Ei",
@@ -27,7 +27,6 @@
   "text.easy_npc.config.advanced": "Erweitert",
   "text.easy_npc.config.attributes": "Attribute",
   "text.easy_npc.config.basic": "Einfach",
-  "text.easy_npc.config.button.label": "Beschriftung",
   "text.easy_npc.config.button.name": "Name",
   "text.easy_npc.config.cancel": "Abbrechen",
   "text.easy_npc.config.clear": "Löschen",
@@ -46,7 +45,6 @@
   "text.easy_npc.config.dialog.copy_dialog_label": "Kopiere Dialog Label '%s'",
   "text.easy_npc.config.dialog.edit": "Bearbeiten",
   "text.easy_npc.config.dialog.edit_dialog": "Bearbeiten Dialog '%s'",
-  "text.easy_npc.config.dialog.label": "Beschriftung",
   "text.easy_npc.config.dialog.name": "Name",
   "text.easy_npc.config.dialog.text": "Dialog Text",
   "text.easy_npc.config.dialog.translate": "Übersetzen",
@@ -77,8 +75,10 @@
   "text.easy_npc.config.import_custom_preset": "Importiere benutzerdefinierte Vorlage",
   "text.easy_npc.config.import_default_preset": "Importiere Standard Vorlage",
   "text.easy_npc.config.import_world_preset": "Importiere Welt Vorlage",
+  "text.easy_npc.config.label_id": "Beschriftung/Id",
   "text.easy_npc.config.lock_rotation": "Sperre",
   "text.easy_npc.config.locked": "Gesperrt",
+  "text.easy_npc.config.next_page": "Weiter >",
   "text.easy_npc.config.no": "Nein",
   "text.easy_npc.config.no_answer": "Nein - Antwort",
   "text.easy_npc.config.no_presets_found": "Keine Vorlagen gefunden!",
@@ -121,6 +121,7 @@
   "text.easy_npc.config.preset_custom_for": "Benutzerdefinierte Vorlagen für %s",
   "text.easy_npc.config.preset_default_for": "Standard Vorlagen für %s",
   "text.easy_npc.config.preset_world_for": "Welt Vorlagen für %s",
+  "text.easy_npc.config.previous_page": "< Zurück",
   "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
   "text.easy_npc.config.random_stroll": "Zufälliges Schlendern",
@@ -139,8 +140,6 @@
   "text.easy_npc.config.trading": "Handel",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max. Verwendungen",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. für Reset",
-  "text.easy_npc.config.next_page": "Weiter >",
-  "text.easy_npc.config.previous_page": "< Zurück",
   "text.easy_npc.config.trading.rewarded_exp_per_trade": "Belohnungs EXP",
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen oder eine Skin-URL",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
@@ -149,6 +148,7 @@
   "text.easy_npc.config.yes": "Ja",
   "text.easy_npc.config.yes_answer": "Ja - Antwort",
   "text.easy_npc.config.yes_no_dialog": "Ja/Nein",
+  "text.easy_npc.config.name_to_label.tooltip": "Konvertiert den Namen in ein Label/ID.",
   "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für Easy NPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
   "text.easy_npc.not_implemented": "Noch nicht implementiert!",
   "text.easy_npc.preset.importButton": "Importiere Vorlage",
