--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -15,8 +15,8 @@
   "item.easy_npc.fairy_spawn_egg": "Fairy NPC Spawn Egg",
   "item.easy_npc.humanoid_slim_spawn_egg": "Humanoid (slim) NPC Spawn Egg",
   "item.easy_npc.humanoid_spawn_egg": "Humanoid NPC Spawn Egg",
-  "item.easy_npc.skeleton_spawn_egg": "Skeleton NPC-Spawn-Ei",
   "item.easy_npc.iron_golem_spawn_egg": "Iron Golem NPC Spawn Egg",
+  "item.easy_npc.skeleton_spawn_egg": "Skeleton NPC-Spawn-Ei",
   "item.easy_npc.villager_spawn_egg": "Villager NPC Spawn Egg",
   "item.easy_npc.zombie_spawn_egg": "Zombie NPC Spawn Egg",
   "item.easy_npc.zombie_villager_spawn_egg": "Zombie Villager NPC Spawn Egg",
@@ -27,7 +27,6 @@
   "text.easy_npc.config.advanced": "Advanced",
   "text.easy_npc.config.attributes": "Attributes",
   "text.easy_npc.config.basic": "Basic",
-  "text.easy_npc.config.button.label": "Label",
   "text.easy_npc.config.button.name": "Name",
   "text.easy_npc.config.cancel": "Cancel",
   "text.easy_npc.config.clear": "Clear",
@@ -46,7 +45,6 @@
   "text.easy_npc.config.dialog.copy_dialog_label": "Copy Dialog Label '%s'",
   "text.easy_npc.config.dialog.edit": "Edit",
   "text.easy_npc.config.dialog.edit_dialog": "Edit Dialog '%s'",
-  "text.easy_npc.config.dialog.label": "Label",
   "text.easy_npc.config.dialog.name": "Name",
   "text.easy_npc.config.dialog.text": "Dialog Text",
   "text.easy_npc.config.dialog.translate": "Translate",
@@ -77,8 +75,10 @@
   "text.easy_npc.config.import_custom_preset": "Import Custom Preset",
   "text.easy_npc.config.import_default_preset": "Import Default Preset",
   "text.easy_npc.config.import_world_preset": "Import World Preset",
+  "text.easy_npc.config.label_id": "Label/Id",
   "text.easy_npc.config.lock_rotation": "Lock",
   "text.easy_npc.config.locked": "Locked",
+  "text.easy_npc.config.next_page": "Next >",
   "text.easy_npc.config.no": "No",
   "text.easy_npc.config.no_answer": "No - Answer",
   "text.easy_npc.config.no_presets_found": "No presets found!",
@@ -121,6 +121,7 @@
   "text.easy_npc.config.preset_custom_for": "Custom Preset for %s",
   "text.easy_npc.config.preset_default_for": "Standard Preset for %s",
   "text.easy_npc.config.preset_world_for": "World Preset for %s",
+  "text.easy_npc.config.previous_page": "< Previous",
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
   "text.easy_npc.config.random_stroll": "Random Stroll",
@@ -139,8 +140,6 @@
   "text.easy_npc.config.trading": "Trading",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max Uses",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. for Reset",
-  "text.easy_npc.config.next_page": "Next >",
-  "text.easy_npc.config.previous_page": "< Previous",
   "text.easy_npc.config.trading.rewarded_exp_per_trade": "Rewarded Exp",
   "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
@@ -149,6 +148,7 @@
   "text.easy_npc.config.yes": "Yes",
   "text.easy_npc.config.yes_answer": "Yes - Answer",
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
+  "text.easy_npc.config.name_to_label.tooltip": "Convert name to a corresponding label/id.",
   "text.easy_npc.item.easy_npc_wand": "The Easy NPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
   "text.easy_npc.not_implemented": "Not implemented yet!",
   "text.easy_npc.preset.importButton": "Import Preset",
