Added attack and follow objectives. Added respawn button in the case the NPC is stucked or buggy. Improved objective validation and handling. Optimized nbt data to skip default values for better performance and smaller data size.

--- a/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "entity.easy_npc.allay": "Allay",
   "entity.easy_npc.cat": "Cat",
   "entity.easy_npc.chicken": "Chicken",
   "entity.easy_npc.fairy": "Fairy",
@@ -9,6 +10,7 @@
   "entity.easy_npc.villager": "Villager",
   "entity.easy_npc.zombie": "Zombie",
   "entity.easy_npc.zombie_villager": "Zombie Villager",
+  "item.easy_npc.allay_spawn_egg": "Allay NPC Spawn Egg",
   "item.easy_npc.cat_spawn_egg": "Cat NPC Spawn Egg",
   "item.easy_npc.chicken_spawn_egg": "Chicken NPC Spawn Egg",
   "item.easy_npc.easy_npc_wand": "EasyNPC Wand",
@@ -25,6 +27,13 @@
   "text.easy_npc.config.actions": "Actions",
   "text.easy_npc.config.add": "Add",
   "text.easy_npc.config.advanced": "Advanced",
+  "text.easy_npc.config.attack": "Attack",
+  "text.easy_npc.config.attack_animal": "Attack Animal",
+  "text.easy_npc.config.attack_mob_without_creeper": "Attack Mob (without Creepers)",
+  "text.easy_npc.config.attack_mob": "Attack Mob",
+  "text.easy_npc.config.attack_monster": "Attack Monster",
+  "text.easy_npc.config.attack_player": "Attack Player",
+  "text.easy_npc.config.attack_villager": "Attack Villager",
   "text.easy_npc.config.attributes": "Attributes",
   "text.easy_npc.config.basic": "Basic",
   "text.easy_npc.config.button.name": "Name",
@@ -67,6 +76,7 @@
   "text.easy_npc.config.export": "△ Export",
   "text.easy_npc.config.export_preset_text": "Upon clicking the Export button, the NPC settings are saved locally under %1$s as %2$s and can be loaded into other NPCs of the same type using the Import function.",
   "text.easy_npc.config.export_preset_world_text": "Upon clicking the Export button, the NPC settings are saved inside the world data and can be loaded into other NPCs of the same type using the Import function or as new NPC over the '/easy_npc preset import' command.",
+  "text.easy_npc.config.follow": "Follow",
   "text.easy_npc.config.follow_entity_by_uuid": "Follow Entity by UUID",
   "text.easy_npc.config.follow_owner": "Follow Owner (%1$s)",
   "text.easy_npc.config.follow_player": "Follow Player",
@@ -78,6 +88,10 @@
   "text.easy_npc.config.label_id": "Label/Id",
   "text.easy_npc.config.lock_rotation": "Lock",
   "text.easy_npc.config.locked": "Locked",
+  "text.easy_npc.config.melee_attack": "Perform Melee Attack",
+  "text.easy_npc.config.move_back_to_village": "Move back to Village",
+  "text.easy_npc.config.move_through_village": "Move through Village",
+  "text.easy_npc.config.name_to_label.tooltip": "Convert name to a corresponding label/id.",
   "text.easy_npc.config.next_page": "Next >",
   "text.easy_npc.config.no": "No",
   "text.easy_npc.config.no_answer": "No - Answer",
@@ -125,8 +139,11 @@
   "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
   "text.easy_npc.config.question": "Question",
   "text.easy_npc.config.random_stroll": "Random Stroll",
+  "text.easy_npc.config.random_stroll_in_village": "Random Stroll in Village",
+  "text.easy_npc.config.random_swimming": "Random Swimming",
   "text.easy_npc.config.reload_textures": "Reload Textures",
   "text.easy_npc.config.reset": "Reset",
+  "text.easy_npc.config.respawn": "Respawn",
   "text.easy_npc.config.rotation": "Rotation",
   "text.easy_npc.config.save": "Save",
   "text.easy_npc.config.save_before_edit_buttons": "Save before edit the buttons!",
@@ -148,20 +165,23 @@
   "text.easy_npc.config.yes": "Yes",
   "text.easy_npc.config.yes_answer": "Yes - Answer",
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
-  "text.easy_npc.config.name_to_label.tooltip": "Convert name to a corresponding label/id.",
+  "text.easy_npc.config.zombie_attack": "Perform Zombie Attack",
   "text.easy_npc.item.easy_npc_wand": "The Easy NPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
   "text.easy_npc.not_implemented": "Not implemented yet!",
   "text.easy_npc.preset.importButton": "Import Preset",
   "text.easy_npc.preset.importQuestion": "Are you sure you want to import the preset '%s'?",
   "text.easy_npc.preset.importWarning": "This will overwrite the '%s' NPC settings!",
-  "text.easy_npc.removeDialog.deleteButton": "Delete",
+  "text.easy_npc.removeDialog.deleteButton": "Delete Dialog",
   "text.easy_npc.removeDialog.deleteQuestion": "Are you sure you want to delete this Dialog?",
   "text.easy_npc.removeDialog.deleteWarning": "The dialog '%s' will be lost forever! (A long time!)",
-  "text.easy_npc.removeDialogButton.deleteButton": "Delete",
+  "text.easy_npc.removeDialogButton.deleteButton": "Delete Dialog Button",
   "text.easy_npc.removeDialogButton.deleteQuestion": "Are you sure you want to delete this Dialog Button?",
   "text.easy_npc.removeDialogButton.deleteWarning": "The dialog button '%s' will be lost forever! (A long time!)",
-  "text.easy_npc.removeNPC.deleteButton": "Delete",
+  "text.easy_npc.removeNPC.deleteButton": "Delete NPC",
   "text.easy_npc.removeNPC.deleteQuestion": "Are you sure you want to delete this NPC?",
   "text.easy_npc.removeNPC.deleteWarning": "'%s' will be lost forever! (A long time!)",
+  "text.easy_npc.respawnNPC.confirmQuestion": "Are you sure you want to respawn this NPC?",
+  "text.easy_npc.respawnNPC.confirmWarning": "The NPC '%s' will be respawned as new NPC, but the same settings, position and UUID!",
+  "text.easy_npc.respawnNPC.respawnButton": "Respawn NPC",
   "text.easy_npc.trading": "Trading"
 }
