--- a/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -1,4 +1,5 @@
 {
+  "entity.easy_npc.allay": "Allay",
   "entity.easy_npc.cat": "Katze",
   "entity.easy_npc.chicken": "Huhn",
   "entity.easy_npc.fairy": "Feen",
@@ -9,6 +10,7 @@
   "entity.easy_npc.villager": "Dorfbewohner",
   "entity.easy_npc.zombie": "Zombie",
   "entity.easy_npc.zombie_villager": "Zombie-Dorfbewohner",
+  "item.easy_npc.allay_spawn_egg": "Allay NPC Spawn-Ei",
   "item.easy_npc.cat_spawn_egg": "Katzen NPC Spawn-Ei",
   "item.easy_npc.chicken_spawn_egg": "Hühner NPC Spawn-Ei",
   "item.easy_npc.easy_npc_wand": "EasyNPC Stab",
@@ -25,6 +27,13 @@
   "text.easy_npc.config.actions": "Aktionen",
   "text.easy_npc.config.add": "Hinzufügen",
   "text.easy_npc.config.advanced": "Erweitert",
+  "text.easy_npc.config.attack": "Angriff",
+  "text.easy_npc.config.attack_animal": "Attackiere Tiere",
+  "text.easy_npc.config.attack_mob_without_creeper": "Attackiere Mobs (außer Creeper)",
+  "text.easy_npc.config.attack_mob": "Attackiere Mobs",
+  "text.easy_npc.config.attack_monster": "Attackiere Monster",
+  "text.easy_npc.config.attack_player": "Attackiere Spieler",
+  "text.easy_npc.config.attack_villager": "Attackiere Dorfbewohner",
   "text.easy_npc.config.attributes": "Attribute",
   "text.easy_npc.config.basic": "Einfach",
   "text.easy_npc.config.button.name": "Name",
@@ -67,6 +76,7 @@
   "text.easy_npc.config.export": "△ Exportieren",
   "text.easy_npc.config.export_preset_text": "Durch Betätigung des Export-Buttons werden die NPC-Einstellungen unter %1$s als %2$s lokal gespeichert und können mithilfe der Import-Funktion in anderen NPCs des gleichen Typs geladen werden.",
   "text.easy_npc.config.export_preset_world_text": "Durch Betätigung des Export-Buttons werden die NPC-Einstellungen in den Weltdaten gespeichert und können  mithilfe der Import-Funktion in anderen NPCs des gleichen Typs geladen werden oder als neuer NPC über den '/easy_npc preset import' Befehl.",
+  "text.easy_npc.config.follow": "Folgen",
   "text.easy_npc.config.follow_entity_by_uuid": "Folge Entität mit UUID",
   "text.easy_npc.config.follow_owner": "Folge dem Besitzer (%1$s)",
   "text.easy_npc.config.follow_player": "Folge dem Spieler",
@@ -78,6 +88,10 @@
   "text.easy_npc.config.label_id": "Beschriftung/Id",
   "text.easy_npc.config.lock_rotation": "Sperre",
   "text.easy_npc.config.locked": "Gesperrt",
+  "text.easy_npc.config.melee_attack": "Benutze Nahkampf",
+  "text.easy_npc.config.move_back_to_village": "Zurück zum Dorf bewegen",
+  "text.easy_npc.config.move_through_village": "Durch das Dorf bewegen",
+  "text.easy_npc.config.name_to_label.tooltip": "Konvertiert den Namen in ein Label/ID.",
   "text.easy_npc.config.next_page": "Weiter >",
   "text.easy_npc.config.no": "Nein",
   "text.easy_npc.config.no_answer": "Nein - Antwort",
@@ -125,8 +139,11 @@
   "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
   "text.easy_npc.config.random_stroll": "Zufälliges Schlendern",
+  "text.easy_npc.config.random_stroll_in_village": "Zufälliges Schlendern im Dorf",
+  "text.easy_npc.config.random_swimming": "Zufälliges Schwimmen",
   "text.easy_npc.config.reload_textures": "Texturen neu laden",
   "text.easy_npc.config.reset": "Zurücksetzen",
+  "text.easy_npc.config.respawn": "Respawn",
   "text.easy_npc.config.rotation": "Rotation",
   "text.easy_npc.config.save": "Speichern",
   "text.easy_npc.config.save_before_edit_buttons": "Speichere um die Knöpfe zu bearbeiten",
@@ -148,20 +165,23 @@
   "text.easy_npc.config.yes": "Ja",
   "text.easy_npc.config.yes_answer": "Ja - Antwort",
   "text.easy_npc.config.yes_no_dialog": "Ja/Nein",
-  "text.easy_npc.config.name_to_label.tooltip": "Konvertiert den Namen in ein Label/ID.",
+  "text.easy_npc.config.zombie_attack": "Benutze Zombie Angriff",
   "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für Easy NPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
   "text.easy_npc.not_implemented": "Noch nicht implementiert!",
   "text.easy_npc.preset.importButton": "Importiere Vorlage",
   "text.easy_npc.preset.importQuestion": "Sind Sie sicher, dass Sie die Vorlage '%s' importieren möchten?",
   "text.easy_npc.preset.importWarning": "Alle aktuellen Einstellungen für '%s' werden überschrieben!",
-  "text.easy_npc.removeDialog.deleteButton": "Löschen",
+  "text.easy_npc.removeDialog.deleteButton": "Dialog löschen",
   "text.easy_npc.removeDialog.deleteQuestion": "Sind Sie sicher, dass Sie diesen Dialog löschen möchten?",
   "text.easy_npc.removeDialog.deleteWarning": "Der Dialog '%s' wird für immer verloren sein! (Das ist eine sehr lange Zeit!)",
-  "text.easy_npc.removeDialogButton.deleteButton": "Löschen",
+  "text.easy_npc.removeDialogButton.deleteButton": "Dialog Button löschen",
   "text.easy_npc.removeDialogButton.deleteQuestion": "Sind Sie sicher, dass Sie den Dialog-Button löschen möchten?",
   "text.easy_npc.removeDialogButton.deleteWarning": "Der Dialog-Button '%s' wird für immer verloren sein! (Das ist eine sehr lange Zeit!)",
-  "text.easy_npc.removeNPC.deleteButton": "Löschen",
+  "text.easy_npc.removeNPC.deleteButton": "NPC löschen",
   "text.easy_npc.removeNPC.deleteQuestion": "Sind Sie sicher, dass Sie diesen NPC löschen möchten?",
   "text.easy_npc.removeNPC.deleteWarning": "'%s' wird für immer verloren sein! (Das ist eine sehr lange Zeit!)",
+  "text.easy_npc.respawnNPC.confirmQuestion": "Sind Sie sicher, dass Sie den NPC '%s' re-spawnen möchten?",
+  "text.easy_npc.respawnNPC.confirmWarning": "Der NPC '%s' wird als neuer NPC neu gespawnt, aber mit den gleichen Einstellungen, Position und UUID!",
+  "text.easy_npc.respawnNPC.respawnButton": "NPC re-spawnen",
   "text.easy_npc.trading": "Handel"
 }
