Restricted the edit behavior for NPC to allow more use-cases to the following: - User is sneaking and clicking on the NPC (creative mode only) - User is holding the NPC wand and clicking on the NPC (all modes) Added possibility to adjust sliders with mouse wheel and arrow keys for better usability. Added dialog text editor to allow multiple dialog texts variants or the same dialog. Added "can_use_nether_portal" attribute to allow NPCs to use nether portals or not. Added support for `@initator` with `onHurt` and `onDeath` events. Added support for [Armourer's Workshop][armourers_workshop] mod. Thanks to @SAGESSE-CN. Added possibility to disable model parts to the advanced pose editor. Separated the Player Skin and remote URL Skin screen for better usability. Fixed head and body rotation are not show correctly in some instances. Code optimizations and cleanup.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -24,6 +24,7 @@
   "item.easy_npc.zombie_villager_spawn_egg": "Zombie Dorfbewohner NPC-Spawn-Ei",
   "itemGroup.easy_npc.config_items": "EasyNPC - Konfigurationswerkzeuge",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn-Eier",
+  "text.easy_npc.armourers_workshop.no_support": "Das Skin-Modell %1$s für %2$s wird von Armourer's Workshop noch nicht offiziell unterstützt! Bitte verwenden Sie stattdessen die offiziell empfohlenen Hautmodelle, wie z.B. das humanoide Modell.",
   "text.easy_npc.config.abilities": "Fähigkeiten",
   "text.easy_npc.config.actions": "Aktionen",
   "text.easy_npc.config.add": "Hinzufügen",
@@ -50,6 +51,7 @@
   "text.easy_npc.config.can_float": "Schwimmen",
   "text.easy_npc.config.can_open_door": "Tür öffen",
   "text.easy_npc.config.can_pass_door": "Tür passieren",
+  "text.easy_npc.config.can_use_nether_portal": "Nether Portal benutzen",
   "text.easy_npc.config.cancel": "Abbrechen",
   "text.easy_npc.config.clear": "Löschen",
   "text.easy_npc.config.copy_uuid": "UUID kopieren",
@@ -68,6 +70,8 @@
   "text.easy_npc.config.dialog.copy_dialog_label": "Kopiere Dialog Label '%s'",
   "text.easy_npc.config.dialog.edit": "Bearbeiten",
   "text.easy_npc.config.dialog.edit_dialog": "Bearbeiten Dialog '%s'",
+  "text.easy_npc.config.dialog.edit_dialog_text": "Editiere Dialog Text",
+  "text.easy_npc.config.dialog.edit_text": "Bearbeite Dialog Text",
   "text.easy_npc.config.dialog.name": "Name",
   "text.easy_npc.config.dialog.text": "Dialog Text",
   "text.easy_npc.config.dialog.translate": "Übersetzen",
@@ -146,6 +150,7 @@
   "text.easy_npc.config.open_trading_screen": "Handelsbildschirm",
   "text.easy_npc.config.panic": "Panik",
   "text.easy_npc.config.player_skin": "Spieler",
+  "text.easy_npc.config.url_skin": "Url",
   "text.easy_npc.config.pose": "Pose",
   "text.easy_npc.config.pose.arms": "Arme",
   "text.easy_npc.config.pose.body": "Körper",
@@ -168,7 +173,8 @@
   "text.easy_npc.config.preset_default_for": "Standard Vorlagen für %s",
   "text.easy_npc.config.preset_world_for": "Welt Vorlagen für %s",
   "text.easy_npc.config.previous_page": "< Zurück",
-  "text.easy_npc.config.processing_skin": "Skin wird verarbeitet, bitte warten ...",
+  "text.easy_npc.config.processing_player_skin": "Player Skin wird verarbeitet, bitte warten ...",
+  "text.easy_npc.config.processing_url_skin": "URL Skin wird verarbeitet, bitte warten ...",
   "text.easy_npc.config.question": "Frage",
   "text.easy_npc.config.random_stroll": "Zufälliges Schlendern",
   "text.easy_npc.config.random_stroll_in_village": "Zufälliges Schlendern im Dorf",
@@ -190,7 +196,7 @@
   "text.easy_npc.config.trading.max_uses_per_trade": "Max. Verwendungen",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. für Reset",
   "text.easy_npc.config.trading.rewarded_exp_per_trade": "Belohnungs EXP",
-  "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen oder eine Skin-URL",
+  "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
   "text.easy_npc.config.water_avoiding_random_stroll": "Vermeide Wasser beim zufälligen Schlendern",
   "text.easy_npc.config.world_preset": "Welt",
