--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -24,6 +24,7 @@
   "item.easy_npc.zombie_villager_spawn_egg": "Zombie Villager NPC Spawn Egg",
   "itemGroup.easy_npc.config_items": "EasyNPC - Config Items",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs",
+  "text.easy_npc.armourers_workshop.no_support": "The skin model %1$s for %2$s is not official supported with Armourer's Workshop yet! Please use the official recommended skin models like the humanoid model instead.",
   "text.easy_npc.config.abilities": "Abilities",
   "text.easy_npc.config.actions": "Actions",
   "text.easy_npc.config.add": "Add",
@@ -50,6 +51,7 @@
   "text.easy_npc.config.can_float": "Float",
   "text.easy_npc.config.can_open_door": "Open door",
   "text.easy_npc.config.can_pass_door": "Pass door",
+  "text.easy_npc.config.can_use_nether_portal": "Use Nether Portal",
   "text.easy_npc.config.cancel": "Cancel",
   "text.easy_npc.config.clear": "Clear",
   "text.easy_npc.config.copy_uuid": "Copy UUID",
@@ -68,6 +70,8 @@
   "text.easy_npc.config.dialog.copy_dialog_label": "Copy Dialog Label '%s'",
   "text.easy_npc.config.dialog.edit": "Edit",
   "text.easy_npc.config.dialog.edit_dialog": "Edit Dialog '%s'",
+  "text.easy_npc.config.dialog.edit_dialog_text": "Edit Dialog Text",
+  "text.easy_npc.config.dialog.edit_text": "Edit Dialog Text",
   "text.easy_npc.config.dialog.name": "Name",
   "text.easy_npc.config.dialog.text": "Dialog Text",
   "text.easy_npc.config.dialog.translate": "Translate",
@@ -146,6 +150,7 @@
   "text.easy_npc.config.open_trading_screen": "Trading Screen",
   "text.easy_npc.config.panic": "Panic",
   "text.easy_npc.config.player_skin": "Player",
+  "text.easy_npc.config.url_skin": "Url",
   "text.easy_npc.config.pose": "Pose",
   "text.easy_npc.config.pose.arms": "Arms",
   "text.easy_npc.config.pose.body": "Body",
@@ -168,7 +173,8 @@
   "text.easy_npc.config.preset_default_for": "Standard Preset for %s",
   "text.easy_npc.config.preset_world_for": "World Preset for %s",
   "text.easy_npc.config.previous_page": "< Previous",
-  "text.easy_npc.config.processing_skin": "Processing skin, please wait ...",
+  "text.easy_npc.config.processing_player_skin": "Processing player skin, please wait ...",
+  "text.easy_npc.config.processing_url_skin": "Processing url skin, please wait ...",
   "text.easy_npc.config.question": "Question",
   "text.easy_npc.config.random_stroll": "Random Stroll",
   "text.easy_npc.config.random_stroll_in_village": "Random Stroll in Village",
@@ -190,7 +196,7 @@
   "text.easy_npc.config.trading.max_uses_per_trade": "Max Uses",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. for Reset",
   "text.easy_npc.config.trading.rewarded_exp_per_trade": "Rewarded Exp",
-  "text.easy_npc.config.use_a_player_name": "Use a Player Name or Skin URL",
+  "text.easy_npc.config.use_a_player_name": "Use a Player Name",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
   "text.easy_npc.config.water_avoiding_random_stroll": "Water Avoiding Random Stroll",
   "text.easy_npc.config.world_preset": "World",
