Added Easy NPC position tool to allow easier positioning of NPCs. Added additional Easy NPC Spawn Eggs and entity types for mod integrations. Fixed bounding boxes for NPCs with custom models, poses and scaling. Fixed issue with cut-off dialog button text.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -3,17 +3,24 @@
   "entity.easy_npc.cat": "Katze",
   "entity.easy_npc.chicken": "Huhn",
   "entity.easy_npc.fairy": "Feen",
+  "entity.easy_npc.husk": "Husk",
+  "entity.easy_npc.drowned": "Ertrunkener",
   "entity.easy_npc.humanoid": "Humanoider",
   "entity.easy_npc.humanoid_slim": "Humanoider (schl.)",
   "entity.easy_npc.iron_golem": "Eisengolem",
   "entity.easy_npc.skeleton": "Skelett",
   "entity.easy_npc.villager": "Dorfbewohner",
+  "entity.easy_npc.stray": "Stray",
+  "entity.easy_npc.wither_skeleton": "Wither Skelett",
   "entity.easy_npc.zombie": "Zombie",
   "entity.easy_npc.zombie_villager": "Zombie-Dorfbewohner",
   "item.easy_npc.allay_spawn_egg": "Allay NPC Spawn-Ei",
   "item.easy_npc.cat_spawn_egg": "Katzen NPC Spawn-Ei",
   "item.easy_npc.chicken_spawn_egg": "Hühner NPC Spawn-Ei",
   "item.easy_npc.easy_npc_wand": "EasyNPC Stab",
+  "item.easy_npc.move_easy_npc": "Verschiebe EasyNPC",
+  "item.easy_npc.husk_spawn_egg": "Husk NPC Spawn Egg",
+  "item.easy_npc.drowned_spawn_egg": "Ertrunkener NPC Spawn Egg",
   "item.easy_npc.fairy_spawn_egg": "Elfen NPC Spawn-Ei",
   "item.easy_npc.humanoid_slim_spawn_egg": "Humanoides (schl.) NPC-Spawn-Ei",
   "item.easy_npc.humanoid_spawn_egg": "Humanoides NPC-Spawn-Ei",
@@ -22,6 +29,8 @@
   "item.easy_npc.villager_spawn_egg": "Dorfbewohner NPC-Spawn-Ei",
   "item.easy_npc.zombie_spawn_egg": "Zombie NPC-Spawn-Ei",
   "item.easy_npc.zombie_villager_spawn_egg": "Zombie Dorfbewohner NPC-Spawn-Ei",
+  "item.easy_npc.stray_spawn_egg": "Stray NPC Spawn-Ei",
+  "item.easy_npc.wither_skeleton_spawn_egg": "Wither Skelett NPC Spawn-Ei",
   "itemGroup.easy_npc.config_items": "EasyNPC - Konfigurationswerkzeuge",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn-Eier",
   "text.easy_npc.armourers_workshop.no_support": "Das Skin-Modell %1$s für %2$s wird von Armourer's Workshop noch nicht offiziell unterstützt! Bitte verwenden Sie stattdessen die offiziell empfohlenen Hautmodelle, wie z.B. das humanoide Modell.",
@@ -204,7 +213,8 @@
   "text.easy_npc.config.yes_answer": "Ja - Antwort",
   "text.easy_npc.config.yes_no_dialog": "Ja/Nein",
   "text.easy_npc.config.zombie_attack": "Benutze Zombie Angriff",
-  "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für Easy NPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
+  "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für EasyNPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
+  "text.easy_npc.item.move_easy_npc": "Wählen Sie den EasyNPC mit der linken Maustaste aus und bewegen Sie ihn mit der rechten Maustaste an die gewünschte Position.",
   "text.easy_npc.not_implemented": "Noch nicht implementiert!",
   "text.easy_npc.preset.importButton": "Importiere Vorlage",
   "text.easy_npc.preset.importQuestion": "Sind Sie sicher, dass Sie die Vorlage '%s' importieren möchten?",
