--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -3,17 +3,24 @@
   "entity.easy_npc.cat": "Cat",
   "entity.easy_npc.chicken": "Chicken",
   "entity.easy_npc.fairy": "Fairy",
+  "entity.easy_npc.husk": "Husk",
+  "entity.easy_npc.drowned": "Drowned",
   "entity.easy_npc.humanoid": "Humanoid",
   "entity.easy_npc.humanoid_slim": "Humanoid (slim)",
   "entity.easy_npc.iron_golem": "Iron Golem",
   "entity.easy_npc.skeleton": "Skeleton",
   "entity.easy_npc.villager": "Villager",
   "entity.easy_npc.zombie": "Zombie",
+  "entity.easy_npc.stray": "Stray",
+  "entity.easy_npc.wither_skeleton": "Wither Skeleton",
   "entity.easy_npc.zombie_villager": "Zombie Villager",
   "item.easy_npc.allay_spawn_egg": "Allay NPC Spawn Egg",
   "item.easy_npc.cat_spawn_egg": "Cat NPC Spawn Egg",
   "item.easy_npc.chicken_spawn_egg": "Chicken NPC Spawn Egg",
   "item.easy_npc.easy_npc_wand": "EasyNPC Wand",
+  "item.easy_npc.move_easy_npc": "Move EasyNPC",
+  "item.easy_npc.husk_spawn_egg": "Husk NPC Spawn Egg",
+  "item.easy_npc.drowned_spawn_egg": "Drowned NPC Spawn Egg",
   "item.easy_npc.fairy_spawn_egg": "Fairy NPC Spawn Egg",
   "item.easy_npc.humanoid_slim_spawn_egg": "Humanoid (slim) NPC Spawn Egg",
   "item.easy_npc.humanoid_spawn_egg": "Humanoid NPC Spawn Egg",
@@ -22,6 +29,8 @@
   "item.easy_npc.villager_spawn_egg": "Villager NPC Spawn Egg",
   "item.easy_npc.zombie_spawn_egg": "Zombie NPC Spawn Egg",
   "item.easy_npc.zombie_villager_spawn_egg": "Zombie Villager NPC Spawn Egg",
+  "item.easy_npc.stray_spawn_egg": "Stray NPC Spawn Egg",
+  "item.easy_npc.wither_skeleton_spawn_egg": "Wither Skeleton NPC Spawn Egg",
   "itemGroup.easy_npc.config_items": "EasyNPC - Config Items",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs",
   "text.easy_npc.armourers_workshop.no_support": "The skin model %1$s for %2$s is not official supported with Armourer's Workshop yet! Please use the official recommended skin models like the humanoid model instead.",
@@ -204,7 +213,8 @@
   "text.easy_npc.config.yes_answer": "Yes - Answer",
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
   "text.easy_npc.config.zombie_attack": "Perform Zombie Attack",
-  "text.easy_npc.item.easy_npc_wand": "The Easy NPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
+  "text.easy_npc.item.easy_npc_wand": "The EasyNPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
+  "text.easy_npc.item.move_easy_npc": "Select the EasyNPC with the left mouse button and move it with the right mouse button to the targeted position.",
   "text.easy_npc.not_implemented": "Not implemented yet!",
   "text.easy_npc.preset.importButton": "Import Preset",
   "text.easy_npc.preset.importQuestion": "Are you sure you want to import the preset '%s'?",
